Sugati/src/objects/Holiday_Question__c.object
<CustomObject>
    <fields>
        <fullName>HQ_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Holiday_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HQ_Answer_Time__c</fullName>
        <label>Answer Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HQ_Create_Task__c</fullName>
        <formula>HQ_Question__r.Q_Task__c</formula>
        <label>Create Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HQ_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Holiday_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HQ_Order__c</fullName>
        <label>Order</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HQ_OwnerID_F__c</fullName>
        <formula>HQ_Opportunity__r.Owner.Id</formula>
        <label>OwnerID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Question_F__c</fullName>
        <formula>HQ_Question__r.Q_Question_Name__c</formula>
        <label>Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HQ_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipName>Holiday_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Preference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HQ_Order__c</columns>
        <columns>HQ_Opportunity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HEQ-{0000000}</displayFormat>
        <label>Holiday Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>